Added new stage for unit testing using maven